--- a/src/app/sistema/vendas/filtrar-vendas/filtrar-vendas.component.html
+++ b/src/app/sistema/vendas/filtrar-vendas/filtrar-vendas.component.html
@@ -10,62 +10,78 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body px-4">
-            <div class="row">
-                <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                  <input (change)="filtrarData($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" placeholder="Data">
-                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data</label>
-                </div>
-                <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                  <input (keyup)="filtrarLoja($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Loja">
-                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Loja</label>
-                </div>
-                <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                    <input (keyup)="filtrarVendedor($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
-                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Vendedor</label>
-                </div>
-                <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                    <input (keyup)="filtrarCliente($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
-                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cliente</label>
-                </div>
-                <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                    <input currencyMask [value]="total | currency: 'BRL'" (keyup)="filtrarTotal($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
-                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Total</label>
-                </div>
-                <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                    <input (load)="filtrarStatus($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
-                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Status</label>
-                </div>
-            </div>
+          <div class="row">
+              <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                <input (change)="filtrarData($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" placeholder="Data">
+                <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data</label>
+              </div>
+              <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                  <input (keyup)="filtrarCliente($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cliente</label>
+              </div>
+              <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                  <input currencyMask [value]="total | currency: 'BRL'" (keyup)="filtrarTotal($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Total</label>
+              </div>
+              <div class="col px-2 pt-4 p-0 m-0 form-floating">
+                  <input (load)="filtrarStatus($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Vendedor">
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Status</label>
+              </div>
+          </div>
 
-         <!-- Lista de clientes -->
-           <!-- Tabela -->
-        <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center align-items-center" *ngFor="let pedido of pedidos">
+          <!-- Lista de clientes -->
+          <!-- Tabela -->
+          <div class="row m-0 my-5 text-custom-dark justify-content-center">
             <div class="col-1">
-            <p>{{ pedido.id }}</p>
+              <h5 class="fw-bold text-truncate">ID</h5>
             </div>
             <div class="col-1">
-            <p>{{ pedido.data | date }}</p>
+              <h5 class="fw-bold text-truncate">Data</h5>
             </div>
             <div class="col-1">
-            <p>{{ pedido.loja }}</p>
+              <h5 class="fw-bold text-truncate">Loja</h5>
             </div>
             <div class="col-2">
-            <p>{{ pedido.vendedor }}</p>
+              <h5 class="fw-bold text-truncate">Vendedor</h5>
             </div>
             <div class="col-2">
-            <p>{{ pedido.cliente }}</p>
+              <h5 class="fw-bold text-truncate">Cliente</h5>
             </div>
             <div class="col-2">
-            <p>{{ pedido.total | currency:'BRL'}}</p>
+              <h5 class="fw-bold text-truncate">Valor</h5>
             </div>
             <div class="col-1">
-            <p>{{ pedido.status }}</p>
+              <h5 class="fw-bold text-truncate">Status</h5>
             </div>
-            <div class="col text-end">
-            <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/vendas/pedidos/visualizar/{{pedido.id}}" data-bs-dismiss="modal" aria-label="Close"></i>
-            <i class="fs-5 bi-pen-fill icon-edit p-3" routerLink="/sistema/vendas/pedidos/editar/{{pedido.id}}" cursor="pointer" data-bs-dismiss="modal" aria-label="Close"></i>
-            </div>
-        </div>
+            <div class="col text-end"></div>
+          </div>
+          <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center align-items-center" *ngFor="let pedido of pedidos">
+              <div class="col-1">
+              <p>{{ pedido.id }}</p>
+              </div>
+              <div class="col-1">
+              <p>{{ pedido.data | date }}</p>
+              </div>
+              <div class="col-1">
+              <p>{{ pedido.loja }}</p>
+              </div>
+              <div class="col-2">
+              <p>{{ pedido.vendedor }}</p>
+              </div>
+              <div class="col-2">
+              <p>{{ pedido.cliente }}</p>
+              </div>
+              <div class="col-2">
+              <p>{{ pedido.total | currency:'BRL'}}</p>
+              </div>
+              <div class="col-1">
+              <p>{{ pedido.status }}</p>
+              </div>
+              <div class="col text-end">
+              <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/vendas/pedidos/visualizar/{{pedido.id}}" data-bs-dismiss="modal" aria-label="Close"></i>
+              <i class="fs-5 bi-pen-fill icon-edit p-3" routerLink="/sistema/vendas/pedidos/editar/{{pedido.id}}" cursor="pointer" data-bs-dismiss="modal" aria-label="Close"></i>
+              </div>
+          </div>
         <!-- Dados cadastrais -->
         </div>
         <!-- Modal footer -->
