--- a/src/app/sistema/vendas/vendas-diretas/criar-pedido-vendas-diretas/criar-pedido-vendas-diretas.component.html
+++ b/src/app/sistema/vendas/vendas-diretas/criar-pedido-vendas-diretas/criar-pedido-vendas-diretas.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <form>
+      <form [formGroup]="vendasDiretasForm" (ngSubmit)="sendForm(vendasDiretasForm)">
 
         <!-- Criar pedido -->
         <div class="row m-0">
@@ -29,7 +29,7 @@
           <!-- Data da compra -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="date"
-              placeholder="Data da compra" [max]="getDate()">
+              placeholder="Data da compra" [max]="getDate()" id="data" fromControlName="data">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da compra</label>
           </div>
 
@@ -37,7 +37,7 @@
           <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
             <select #loja (change)="setLojaSelecionada(loja.value)"
               class="form-select form-select-lg h-100 px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-              placeholder="Loja">
+              placeholder="Loja" id="loja" fromControlName="loja">
               <option value="" disabled selected>Selecione uma Loja</option>
               <option *ngFor="let loja of lojas;" [value]="loja.id">{{loja.razao_social}}
               </option>
@@ -49,7 +49,7 @@
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
             <select #vendedor (change)="setVendedorSelecionado(vendedor.value)"
               class="form-select form-select-lg h-100 px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-              placeholder="Vendedor">
+              placeholder="Vendedor" id="vendedor" fromControlName="vendedor">
               <option value="" disabled selected>Selecione um Vendedor</option>
               <option *ngFor="let vendedor of vendedores;" [value]="vendedor.id">{{vendedor.razao_social}}
               </option>
@@ -72,13 +72,13 @@
           <!-- CNPJ -->
           <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="CNPJ">
+              placeholder="CNPJ" id="cnpj" fromControlName="cnpj">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNPJ</label>
           </div>
           <!-- Nome do Cliente -->
           <div class="col-5 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Nome do Cliente">
+              placeholder="Nome do Cliente" id="cliente" fromControlName="cliente">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do Cliente</label>
           </div>
 
@@ -96,7 +96,7 @@
           <!-- Condição de pagamento -->
           <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
             <select class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark"
-              type="text" placeholder="Condição de pagamento">
+              type="text" placeholder="Condição de pagamento" id="condPagamento" fromControlName="condPagamento">
               <option value="" disabled selected>Condição de pagamento</option>
               <option value="7">7 Dias</option>
               <option value="30">30 Dias</option>
@@ -108,7 +108,7 @@
           <!-- Tabela de Preço Aplicada -->
           <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
             <select class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark"
-              type="text" placeholder="Tabela de Preço Aplicada especial">
+              type="text" placeholder="Tabela de Preço Aplicada especial" id="tabPreco" fromControlName="tabPreco">
               <option value="" disabled selected>Selecione uma Tabela</option>
               <option value="7">7 Dias</option>
               <option value="30">30 Dias</option>
@@ -120,7 +120,7 @@
           <!-- Frete Fixo -->
           <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Frete Fixo">
+              placeholder="Frete Fixo" id="valorFreteEntrega" fromControlName="valorFreteEntrega">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Frete Fixo</label>
           </div>
 
@@ -166,7 +166,7 @@
                 <td>
                   <input (change)="atualizarSubtotalProduto($event.target, item.codigo)"
                     class="form-control form-control-sm" type="number" [value]="item.quantidade"
-                    placeholder="Quantidade">
+                    placeholder="Quantidade" id="quantidade" fromControlName="quantidade">
                 </td>
                 <td>
                   {{item.valor_unitario | currency:'BRL'}}
@@ -196,22 +196,22 @@
         <div class="row">
           <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="CEP">
+              placeholder="CEP" id="cep" fromControlName="cep">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">CEP</label>
           </div>
           <div class="col-3 px-2 pt-4 p-0 m-0 ms-5 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Endereço">
+              placeholder="Endereço" id="endereço" fromControlName="endereço">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Endereço</label>
           </div>
           <div class="col-2 px-2 pt-4 p-0 m-0 ms-5 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Número">
+              placeholder="Número" id="numero" fromControlName="numero">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Número</label>
           </div>
           <div class="col-3 px-2 pt-4 p-0 m-0 ms-5 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Bairro">
+              placeholder="Bairro" id="bairro" fromControlName="bairro">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Bairro</label>
           </div>
         </div>
@@ -219,12 +219,12 @@
         <div class="row">
           <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Cidade">
+              placeholder="Cidade" id="cidade" fromControlName="cidade">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cidade</label>
           </div>
           <div class="col-3 px-2 pt-4 p-0 m-0 ms-5 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Complemento">
+              placeholder="Complemento" id="complemento" fromControlName="complemento">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Complemento</label>
           </div>
         </div>
@@ -233,17 +233,17 @@
         <div class="row m-0 mt-3  py-2 d-flex justify-content-between  border-bottom border-top">
           <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="CNPJ">
+              placeholder="Motorista" id="motorista" fromControlName="motorista">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Motorista</label>
           </div>
           <div class="col-3 px-2 pt-4 p-0 m-0 ms-2 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="CNPJ">
+              placeholder="palca" id="placa" fromControlName="placa">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Placa</label>
           </div>
           <div class="col-3 px-2 pt-4 p-0 m-0 me-2 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="date"
-              placeholder="Previsão de Entrega" [max]="getDate()">
+              placeholder="Previsão de Entrega" [max]="getDate()" id="previsaoEntrega" fromControlName="previsaoEntrega">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Previsão de Entrega</label>
           </div>
         </div>
@@ -286,7 +286,7 @@
         <div class="row ps-5 pe-5 d-flex justify-content-between">
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
             <select class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark"
-              type="text" placeholder="Meio de Pagamento">
+              type="text" placeholder="Meio de Pagamento" id="meioPagamento" fromControlName="meioPagamento">
               <option value="" disabled selected>Selecione um meio de pagamento</option>
               <option value="7">7 Dias</option>
               <option value="30">30 Dias</option>
@@ -296,12 +296,12 @@
           </div>
           <div class="col-3 px-2 pt-4 p-0 m-0 ms-2 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="date"
-              placeholder="Data de Vencimento" [max]="getDate()">
+              placeholder="Data de Vencimento" [max]="getDate()" id="dataVencimento" fromControlName="dataVencimento">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data de Vencimento</label>
           </div>
           <div class="col-4 px-2 pt-4 p-0 m-0 me-2 form-floating">
             <select class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark"
-              type="text" placeholder="Meio de Pagamento">
+              type="text" placeholder="Meio de Pagamento" id="aguradandoPagamento" fromControlName="aguradandoPagamento">
               <option value="" disabled selected>Aguardando Pagamento</option>
               <option value="7">7 Dias</option>
               <option value="30">30 Dias</option>
@@ -314,12 +314,12 @@
         <div class="row ps-5 pe-5 d-flex justify-content-between">
           <div class="col-5 px-2 pt-4 p-0 m-0 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Link do Boleto">
+              placeholder="Link do Boleto" id="linkBoleto" fromControlName="linkBoleto">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Link do Boleto</label>
           </div>
           <div class="col-5 px-2 pt-4 p-0 m-0 me-5 form-floating">
             <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text"
-              placeholder="Link da Nota Fiscal">
+              placeholder="Link da Nota Fiscal" id="linkNf" fromControlName="linkNf">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Link da Nota Fiscal</label>
           </div>
         </div>
@@ -329,7 +329,7 @@
           <!-- Observações -->
           <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
             <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Observações"
-              style="height: 150px"></textarea>
+              style="height: 150px" id="obs" fromControlName="obs"></textarea>
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Observações</label>
           </div>
         </div>
@@ -358,7 +358,7 @@
 
           <!-- Botão Salvar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
-            <button type="button"
+            <button type="submit"
               class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
               <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
               <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"></i>
