--- a/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
@@ -140,7 +140,7 @@
                 type="text"
                 placeholder="Preço de custo"
                 formControlName="cust_price"
-                mask="separator.2"
+                mask="separator,2"
                 prefix="R$"
                 thousandSeparator="."
               />
