--- a/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
@@ -24,23 +24,6 @@
         </a>
     </div>
 
-    <!-- Botão Filtro -->
-    <div class="col-4 px-2 p-0 m-0">
-        <a class="
-        rounded-15
-        py-2
-        px-4
-        bg-white
-        h-limited
-        d-flex
-        justify-content-between
-        shadow-sm
-      ">
-            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
-            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-        </a>
-    </div>
-
     <!-- Adicionar -->
     <div class="col-1 px-2 p-0 m-0 text-center">
         <a class="px-2 py-2">
@@ -111,6 +94,7 @@
     </div>
     <div class="col-2 text-end">
         <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/estoque/detalhe/{{ produto.codigo }}"></i>
-        <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
+        <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer" data-bs-toggle="modal" data-bs-target="#editProdutos"></i>
     </div>
 </div>
+<app-edit-produto-estoque></app-edit-produto-estoque>
