--- a/src/app/sistema/estoque/fornecedores/fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/fornecedores.component.html
@@ -1,66 +1,83 @@
 <div class="row m-0 justify-content-center align-items-center">
-  
-  <!-- Pesquisar -->
-  <div class="col-4 px-2 p-0 m-0 position-relative">
-    <input class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
-    <a class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark">
-      <i class="bi-search"></i>
-      <!-- <i class="bi-search my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i> -->
-    </a>
-  </div>
-  
-  <!-- Botão Filtro -->
-  <div class="col-4 px-2 p-0 m-0">
-    <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
-      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
-      <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-    </a>
-  </div>
-  
-  <!-- Adicionar fornecedor -->
-  <div class="col-1 px-2 p-0 m-0 text-center">
-    <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarFornecedor">
-      <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
-    </a>
-  </div>
+    <!-- Pesquisar -->
+    <div class="col-4 px-2 p-0 m-0 position-relative">
+        <input (keyup)="(pesquisaFornecedores)" class="
+        form-control form-control-lg
+        border-0
+        h-limited
+        py-2
+        ps-4
+        pe-5
+        rounded-15
+        shadow-sm
+      " type="text" placeholder="Pesquisar" />
+        <a class="
+        fs-4
+        position-absolute
+        translate-middle
+        top-50
+        me-4
+        end-0
+        text-custom-dark
+      ">
+            <i class="bi-search"></i>
+            <!-- <i class="bi-search my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i> -->
+        </a>
+    </div>
+
+    <!-- Adicionar fornecedor -->
+    <div class="col-1 px-2 p-0 m-0 text-center">
+        <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarFornecedor">
+            <i class="
+          bi-plus-square-fill
+          icon-view
+          my-auto
+          fs-3
+          p-2
+          m-0
+          fw-bold
+          text-custom-dark
+        "></i>
+        </a>
+    </div>
 </div>
 
 <!-- Títulos da Tabela -->
 <div class="row m-0 my-5 text-custom-dark justify-content-center">
-  <div class="col-3">
-    <h5 class="fw-bold">Empresa</h5>
-  </div>
-  <div class="col-3">
-    <h5 class="fw-bold">Telefone</h5>
-  </div>
-  <div class="col-3 col-lg-3">
-    <h5 class="fw-bold">E-mail</h5>
-  </div>
-  <div class="col">
-    <h5 class="fw-bold d-none">Ações</h5>
-  </div>
+    <div class="col-3">
+        <h5 class="fw-bold">Empresa</h5>
+    </div>
+    <div class="col-3">
+        <h5 class="fw-bold">Telefone</h5>
+    </div>
+    <div class="col-3 col-lg-3">
+        <h5 class="fw-bold">E-mail</h5>
+    </div>
+    <div class="col">
+        <h5 class="fw-bold d-none">Ações</h5>
+    </div>
 </div>
 
 <!-- Tabela -->
 <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let fornecedor of fornecedores">
-  <div class="col-3">
-    <p>{{ fornecedor.fantasy_name }}</p>
-  </div>
-  <div class="col-3">
-    <p>{{ fornecedor.contacts[0].tel_1 }}</p>
-  </div>
-  <div class="col-3">
-    <p>{{ fornecedor.contacts[0].email }}</p>
-  </div>
-  <div class="col text-end">
-    <a data-bs-toggle="modal" data-bs-target="#viewFornecedor" (click)="loadFornecedorView(fornecedor)">
-      <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
-    </a>
-    <a data-bs-toggle="modal" data-bs-target="#editarFornecedor" (click)="loadFornecedorEdit(fornecedor)">
-      <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
-    </a>
-    <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="delete(fornecedor)"></i>
-  </div>
+    <div class="col-3">
+        <p>{{ fornecedor.fantasy_name }}</p>
+    </div>
+    <div class="col-3">
+        <p>{{ fornecedor.contacts[0].tel_1 }}</p>
+    </div>
+    <div class="col-3">
+        <p>{{ fornecedor.contacts[0].email }}</p>
+    </div>
+    <div class="col text-end">
+        <a data-bs-toggle="modal" data-bs-target="#viewFornecedor" (click)="loadFornecedorView(fornecedor)">
+            <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
+        </a>
+        <a data-bs-toggle="modal" data-bs-target="#editarFornecedor" (click)="loadFornecedorEdit(fornecedor)">
+            <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
+        </a>
+        <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="delete(fornecedor)"></i>
+    </div>
 </div>
 
 <app-view-fornecedor></app-view-fornecedor>
