--- a/src/app/sistema/vendas/vendas-diretas/criar-pedido-vendas-diretas/criar-pedido-vendas-diretas.component.scss
+++ b/src/app/sistema/vendas/vendas-diretas/criar-pedido-vendas-diretas/criar-pedido-vendas-diretas.component.scss
@@ -13,3 +13,13 @@ input[type=number] {
 
 }
 
+.drivers-list li:hover{
+  background: #f0f0f0;
+}
+
+.search-sugestion{
+  z-index: 1000;
+  background: #fff;
+  position: absolute;
+}
+
